--- a/module4/css/style.css
+++ b/module4/css/style.css
@@ -3,21 +3,21 @@
   --second-color: #f5f5f5;
   --third-color: #990099;
   --forth-color: black;
-  --font:'Inconsolata';
   --shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
+html { font-size: calc(1em + 1vw)}
+button { font-size: inherit }
+input { font-size: inherit }
+
 body{ 
-	font-family: var(--font);
+	font-family: Inconsolata;
 	margin: 0;
 	background-color: var(--first-color); 
-	padding-top: 100px;
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: center;
-	min-height: 100vh;
+	padding-top: 4rem;
+  	display: grid;
+  	justify-items:center;
 }
-
 
 /*nav*/
 .banner{
@@ -37,6 +37,7 @@ body{
 .title{	
 	margin-left: 1em;
 	text-align: center;
+	font-size: 0.75em;
 	color: #fff;
 }
 
@@ -54,7 +55,6 @@ a:hover{
 .banner li {
   display: inline;
   margin: 1rem;
-  font-size: 20px;
 }
 
 .banner ul {
@@ -62,33 +62,32 @@ a:hover{
   
 }
 
+
 /*about me*/
 .about-me{
 	display: flex;
-	justify-content: center;
 	width: 80vw;
-	margin: 1rem;
-	padding: 20px;
-	border-radius: 10px;
+	padding: 1rem;
+	margin: .5rem;
+	border-radius: 6px;
 	background-color: var(--second-color);
 	box-shadow: var(--shadow);
 }
-.profile{
-	padding: 20px;
-}
-.profile-pic{
-	padding: 20px;
 
+
+.profile{
+	padding: 1em;
 }
 .about-me-text{
-	padding: 20px;
+	padding: 1em;
 }
 
 .social-media li {
-	margin:10px;
+	font-size: .75em;
 	display: inline;
 }
 .social-media ul {
+	padding: .3rem;
 	list-style-type: none;
 }
 
@@ -96,27 +95,24 @@ a:hover{
 
 .career{
 	display: flex;
-	justify-content: center;
-	list-style-type: none;
-	margin: 1rem;
+	margin: .5rem;
+	width: calc(80vw + 2rem);
+	
 }
 
 .goals{
 	width: 45vw;
-	min-height: 250px;
-	padding: 20px;
-	margin: 1rem;
-	border-radius: 10px;
+	padding: 2rem;
+	border-radius: 6px;
+	margin-right:1rem;
 	background-color: var(--second-color);
 	box-shadow: var(--shadow);
 }
 
 .skills{
-	width: 30vw;
-	min-height: 250px;
-	padding: 20px;
-	margin: 1rem;
-	border-radius: 10px;
+	width: 35vw;
+	padding: 2rem;
+	border-radius: 6px;
 	background-color: var(--second-color);
 	box-shadow: var(--shadow);
 }
@@ -126,23 +122,37 @@ a:hover{
 
 
 .projects{
+	display: flex;
+	flex-flow: row wrap;
 	width: 80vw;
-	margin: 1rem;
-	padding: 20px;
-	text-align: center;
-	border-radius: 10px;
+	padding: 1rem;
+	margin: .5rem;
+	border-radius: 6px;
 	background-color: var(--second-color);
 	box-shadow: var(--shadow);
 	
 }
-
-.project{
-	margin: auto;
-	padding: 20px;
-    text-align: center;
-    
+.projects h2{
+	width: 100%;
+	margin: 1rem;
+	
 }
 
+.project{
+    text-align: center;
+    padding: 1rem;
+    margin: 1rem;
+    width: 25%;
+    box-shadow: var(--shadow);
+    color: #fff;
+    background-color: var(--third-color);
+    border-radius: 8px;
+    
+}
+.project a{    
+    color: #fff;
+    
+}
 
 
 /*contact*/
@@ -151,17 +161,15 @@ a:hover{
 	display: flex;
 	flex-flow: column;
 	justify-content: center;
-	list-style-type: none;
-	width: 80vw;
-	margin: 1rem;
-	padding: 20px;
 	text-align: center;
-	border-radius: 10px;
+	width: 80vw;
+	padding: 1rem;
+	margin: .5rem;
+	border-radius: 6px;
 	background-color: var(--second-color);
 	box-shadow: var(--shadow);
 }
 .contact{
-	padding: 10px;
 	text-align: left;
 	margin: 0 auto;
 
@@ -169,20 +177,17 @@ a:hover{
 
 input{
 	min-width: 30vw;
-	margin: 1rem;
-	min-height: 30px;
+	margin-bottom: 15px;
+	margin-top: 5px;
+	padding: .5 rem;
 }
 
 input[type=button], input[type=submit], input[type=reset] {
 	background-color: var(--third-color);
-	border: none;
 	color: white;
-	padding: 1rem;
-	text-decoration: none;
-	margin: 1rem;
-	cursor: pointer;
- 	width: 31vw;
- 	border-radius: 1000vh;
+	padding: 10px;
+ 	width: calc(30vw + .5rem);
+ 	border-radius: 8px;
  	box-shadow: var(--shadow);
 
 }
@@ -193,23 +198,22 @@ input[type=button], input[type=submit], input[type=reset] {
 	flex-flow: row wrap;
 	justify-content: center;
 	width: 80vw;
-	margin: 1rem;
-	padding: 20px;
+	margin: .5rem;
+	padding: 2rem;
 	border-radius: 10px;
 	background-color: var(--second-color);
 	box-shadow: var(--shadow);
 
 }
 .job{
-	padding: 20px;
+	padding: 1rem;
 }
 
 /*education*/
 .education{
-	text-align: left;
 	width: 80vw;
-	margin: 1rem;
-	padding: 20px;
+	margin: .5rem;
+	padding: 2rem;
 	border-radius: 10px;
 	background-color: var(--second-color);
 	box-shadow: var(--shadow);
@@ -220,11 +224,10 @@ input[type=button], input[type=submit], input[type=reset] {
 
 /*footer*/
 .footer{
-	margin-top: 20px;
+	margin-top: 1rem;
 	width: 100vw;
 	background-color: var(--forth-color);
 	color: #fff;
 	text-align: center;
-	max-height: 50px;
 }
 
