--- a/module4/css/style.css
+++ b/module4/css/style.css
@@ -4,6 +4,7 @@
   --third-color: #990099;
   --forth-color: black;
   --shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  --shadow2: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 html { font-size: calc(1em + 1vw)}
@@ -45,11 +46,10 @@ a{
   color: var(--third-color);
   width: 100px;
   text-decoration: none; 
-        } 
-}
+} 
 
 a:hover{
-	 color: #fff;
+	 color: var(--first-color);
 }
 
 .banner li {
@@ -130,6 +130,7 @@ a:hover{
 	border-radius: 6px;
 	background-color: var(--second-color);
 	box-shadow: var(--shadow);
+
 	
 }
 .projects h2{
@@ -143,10 +144,10 @@ a:hover{
     padding: 1rem;
     margin: 1rem;
     width: 25%;
-    box-shadow: var(--shadow);
     color: #fff;
     background-color: var(--third-color);
     border-radius: 8px;
+    box-shadow: var(--shadow);
     
 }
 .project a{    
@@ -154,6 +155,10 @@ a:hover{
     
 }
 
+.project:hover {
+	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
 
 /*contact*/
 
@@ -182,7 +187,7 @@ input{
 	padding: .5 rem;
 }
 
-input[type=button], input[type=submit], input[type=reset] {
+input[type=submit]{
 	background-color: var(--third-color);
 	color: white;
 	padding: 10px;
@@ -191,6 +196,11 @@ input[type=button], input[type=submit], input[type=reset] {
  	box-shadow: var(--shadow);
 
 }
+input[type=submit]:hover{
+	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+ 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
 /*resume*/
 
 .jobs{
